--- a/lifecycle-data/products/microsoft-visual-studio-2005-team-foundation-server.yml
+++ b/lifecycle-data/products/microsoft-visual-studio-2005-team-foundation-server.yml
@@ -3,30 +3,29 @@ metadata:
   title: Visual Studio Team Foundation Server 2005
   description: Visual Studio Team Foundation Server 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
+  ms.openlocfilehash: 56da90ebaa973aed13c5920e83fa0dcfd9d21d52
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4120359"
 name: Visual Studio Team Foundation Server 2005
-summary: |+
+summary: >+
   Visual Studio Team Foundation Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-  - vs
+- vs
 policyType: fixed
 supportDates:
-  start: 06/17/2006
-  end: 07/12/2011
-  extendedEnd: 07/12/2016
+  start: 2006-06-17T00:00:00.000-08:00
+  end: 2011-07-12T22:59:59.999-08:00
+  extendedEnd: 2016-07-12T22:59:59.999-08:00
 releases:
-  - version: Service Pack 1
-    startDate: 12/14/2006
-    endDate: 07/12/2016
-  - version: Original Release
-    startDate: 06/17/2006
-    endDate: 01/08/2008
-content: |+
-
-  ## <a name="links"></a>Koppelingen 
-  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
-  * [Richtlijnen voor migratie](https:// https://msdn.microsoft.com/library/vs/alm/tfs/upgrade/tfs-2005-to-2015)
-
-  > [!NOTE]
-  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
+- version: Service Pack 1
+  startDate: 2006-12-14T00:00:00.000-08:00
+  endDate: 2016-07-12T22:59:59.999-08:00
+- version: Original Release
+  startDate: 2006-06-17T00:00:00.000-08:00
+  endDate: 2008-01-08T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](https:// https://msdn.microsoft.com/library/vs/alm/tfs/upgrade/tfs-2005-to-2015)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie."
