--- a/lifecycle-data/products/windows-server-2016-nano-server-installation-option.yml
+++ b/lifecycle-data/products/windows-server-2016-nano-server-installation-option.yml
@@ -3,30 +3,28 @@ metadata:
   title: Windows Server 2016 Nano Server-installatieoptie
   description: Windows Server 2016 Nano Server-installatieoptie volgt het modern levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Datacenter,Standard'
+  keywords: Datacenter,Standard
+  ms.openlocfilehash: 6e65dc34899d7c6fce38088debaf555a44c1e56d
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4142041"
 name: Windows Server 2016 Nano Server-installatieoptie
-summary: |+
+summary: >+
   Windows Server 2016 Nano Server-installatieoptie volgt het [modern](/lifecycle/policies/modern) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Datacenter, standaard
 
 products:
-  - windows
+- windows
 policyType: modern-on-prem
 supportDates:
-  start: 10/15/2016
-  end: 10/09/2018
+  start: 2016-10-15T00:00:00.000-08:00
+  end: 2018-10-09T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 10/15/2016
-    endDate: 10/09/2018
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Onderhoudsinformatie](/windows-server/get-started/nano-in-semi-annual-channel)
-  * [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)
-
-
-  ## <a name="editions"></a>Edities 
-  * Datacenter
-  * Standard
+- version: Original Release
+  startDate: 2016-10-15T00:00:00.000-08:00
+  endDate: 2018-10-09T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/windows-server/get-started/nano-in-semi-annual-channel)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Standard"
