--- a/lifecycle-data/products/windows-server-2022.yml
+++ b/lifecycle-data/products/windows-server-2022.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Windows Server 2022
   description: Windows Server 2022 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/23/2021
+  ms.date: 2022/03/16
   keywords: 
-  ms.openlocfilehash: 1ed53da378c243b1cb45d78aeb9770a1f6ec3e1d
-  ms.sourcegitcommit: 7c3fe4207bf2db7fe5db69c9c50fd1afb6070311
+  ms.openlocfilehash: eab49a6ae7dbfa393d83d01710cf0ac48b43054c
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/30/2021
-  ms.locfileid: "3508011"
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4134789"
 name: Windows Server 2022
 summary: >+
   Windows Server 2022 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -24,11 +24,11 @@ products:
 - windows
 policyType: fixed
 supportDates:
-  start: 08/18/2021
-  end: 10/13/2026
-  extendedEnd: 10/14/2031
+  start: 2021-11-02T00:00:00.000-08:00
+  end: 2026-10-13T22:59:59.999-08:00
+  extendedEnd: 2031-10-14T22:59:59.999-08:00
 releases:
 - version: Original Release
-  startDate: 08/18/2021
-  endDate: 10/14/2031
-content: "> [!TIP]\n> Microsoft Edge volgt het [moderne levenscyclusbeleid](https://docs.microsoft.com/lifecycle/policies/modern). Raadpleeg de [documentatie over de levenscyclus van Edge](https://docs.microsoft.com/deployedge/microsoft-edge-support-lifecycle) voor informatie over het up-to-date houden van deze browser en voor ondersteuning.\n\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2022 volgen dezelfde levenscyclusdatums. \n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Essentials\n* Standard"
+  startDate: 2021-11-02T00:00:00.000-08:00
+  endDate: 2031-10-14T22:59:59.999-08:00
+content: "> [!TIP]\n> Microsoft Edge volgt het [moderne levenscyclusbeleid](https://docs.microsoft.com/lifecycle/policies/modern). Raadpleeg de [documentatie over de levenscyclus van Edge](https://docs.microsoft.com/deployedge/microsoft-edge-support-lifecycle) voor informatie over het up-to-date houden van deze browser en voor ondersteuning.\n\n\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/windows-server-2022/get-started/whats-new)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2022 volgen dezelfde levenscyclusdatums. \n> [!NOTE]\n> [Hotpatching](https://docs.microsoft.com/azure/automanage/automanage-hotpatch) wordt ondersteund op Windows Server 2022 Datacenter: Azure Edition Core tot het einde van de basisondersteuning.\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Datacenter: Azure Edition\n* Essentials\n* Standard"
