--- a/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
@@ -3,25 +3,26 @@ metadata:
   title: Windows Server Update Services voor Windows Server 2012 R2
   description: Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid van onderdelen.
   ms.date: 01/22/2021
-  keywords: null
+  keywords: 
+  ms.openlocfilehash: ec141de46d46f77854675c3d7012f36cae4c4b4d
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4134641"
 name: Windows Server Update Services voor Windows Server 2012 R2
-summary: |+
+summary: >+
   Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-  - windows
+- windows
 policyType: component
 supportDates:
-  start: 11/25/2013
-  end: 10/10/2023
+  start: 2013-11-25T00:00:00.000-08:00
+  end: 2023-10-10T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 11/25/2013
-    endDate: 10/10/2023
-content: |+
-  > [!TIP]
-  > Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2012 R2.
-
-  ## <a name="links"></a>Koppelingen 
-  * [Windows Server 2012 R2](/lifecycle/)
+- version: Original Release
+  startDate: 2013-11-25T00:00:00.000-08:00
+  endDate: 2023-10-10T22:59:59.999-08:00
+content: "> [!TIP]\n> Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2012 R2.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2012 R2](/lifecycle/)"
