--- a/lifecycle-data/products/windows-storage-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-storage-server-2012-r2.yml
@@ -3,35 +3,29 @@ metadata:
   title: Windows Storage Server 2012 R2
   description: Windows Storage Server 2012 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Essentials,Standard,Workgroup'
+  keywords: Essentials,Standard,Workgroup
+  ms.openlocfilehash: e79fd09b35275e280607e072d89625caa917d4f3
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4134456"
 name: Windows Storage Server 2012 R2
-summary: |+
+summary: >+
   Windows Storage Server 2012 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Essentials, Standaard, Workgroup
 
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
-  start: 11/25/2013
-  end: 10/09/2018
-  extendedEnd: 10/10/2023
+  start: 2013-11-25T00:00:00.000-08:00
+  end: 2018-10-09T22:59:59.999-08:00
+  extendedEnd: 2023-10-10T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 11/25/2013
-    endDate: 10/10/2023
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Richtlijnen voor migratie](/windows-server/upgrade/upgrade-2012r2-to-2019)
-
-  > [!NOTE]
-  > De basis- en uitgebreide ondersteuning voor dit product is uitgebreid om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.
-  > [!NOTE]
-  > De startdatum voor de Essentials-editie is 25 september 2014. 
-
-  ## <a name="editions"></a>Edities 
-  * Essentials
-  * Standard
-  * Workgroup
+- version: Original Release
+  startDate: 2013-11-25T00:00:00.000-08:00
+  endDate: 2023-10-10T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/upgrade/upgrade-2012r2-to-2019)\n\n> [!NOTE]\n> De basis- en uitgebreide ondersteuning voor dit product is uitgebreid om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n> [!NOTE]\n> De startdatum voor de Essentials-editie is 25 september 2014. \n\n## <a name=\"editions\"></a>Edities \n* Essentials\n* Standard\n* Workgroup"
